# goX11

./: .gitignore  README.md  go.mod  goX11Wrapper.go  goX11Wrapper_test.go
x11/: CMakeLists.txt  x11.h
